# DeepSea-prebuilt-example

./: .gitignore  CMakeLists.txt  README.md  prebuild.bat  prebuild.sh  update.sh
TestScene/: CMakeLists.txt  LightData.cpp  TestScene.c  TestSceneGround.msl
TestScene/python/: TestSceneExtension.py
TestVectorDraw/: CMakeLists.txt  TestVectorDraw.c
android/: build.gradle
android/app/: .gitignore  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
cmake/: ConvertFlatbuffers.cmake
scripts/: android-compile.sh  flags  ios-compile.sh  native-compile.bat  native-compile.sh
